# agritrust-casper

./: .gitignore  .vercelignore  LICENSE  README.md  render.yaml  requirements.txt  test_api.py  vercel.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
agent/: requirements.txt
agent/agritrust_agent/: __init__.py  casper_client.py  config.py  models.py  underwriter.py  x402_client.py
api/: casper.py  main.py  state.py  underwriter.py
contracts/: Cargo.toml  Odra.toml  build.rs  package.json
contracts/.cargo/: config.toml
contracts/scripts/: debug_json.py  debug_sign.py  deploy.py  deploy_js.cjs  deploy_js.js  deploy_manual_sign.py  get_wasm_opt.py  test_signing.py  verify_sig.py
contracts/src/: lib.rs
contracts/wasm/: AgriTrust.wasm  AgriTrust_optimized.wasm  AgriTrust_preopt.wasm  check_sections.py  dump_imports.py
scripts/: debug_deploy.py  deploy.py
shims/: cp.c  wasm-strip.c
wasm_proxy/: Cargo.toml
wasm_proxy/src/: main.rs
web/: dashboard.html  demo.html  farmer.html  index.html  lp.html  vercel.json
x402/: client.js  package.json  server.js
x402/lib/: key.mjs
