[package]
name = "agritrust_contract"
version = "0.1.0"
edition = "2021"
authors = ["Ubong <ubongnt@gmail.com>"]
description = "AgriTrust — autonomous trade-finance (RWA invoice + credit + settlement) on Casper, built with the Odra framework."
license = "Apache-2.0"

[dependencies]
odra = { version = "2.8.2", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-livenet-env = { version = "2.8.2", default-features = false }

[lib]
name = "agritrust_contract"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "agritrust_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "agritrust_deploy"
path = "bin/deploy.rs"
test = false

[profile.release]
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(odra_module)"] }

# Patch: casper-types 6.1.0 uses Unix-only APIs (os::unix::OpenOptionsExt,
# libc::sysconf) without cfg-gating, so it fails to compile on Windows.
# Vendored copy with proper #[cfg(unix)] gates. Does not affect the wasm32 build.
[patch.crates-io]
casper-types = { path = "../vendor/casper-types" }
casper-client = { path = "../vendor/casper-client" }
