[package]
name = "wasm_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = "6.1.0"
wee_alloc = "0.4.5"

[lib]
name = "wasm_proxy"
crate-type = ["cdylib"]
path = "src/main.rs"

[patch.crates-io]
casper-types = { path = "../vendor/casper-types" }
